--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 23
         signingConfig signingConfigs.debugKey
-        versionCode 92
+        versionCode 94
         versionName '3.5.3'
     }
 
@@ -67,11 +67,12 @@ repositories {
 }
 
 dependencies {
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.vanniktech:vntnumberpickerpreference:0.2.0-SNAPSHOT'
-    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'asia.ivity.android:drag-sort-listview:1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
