--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:noHistory="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name="com.metinkale.prayerapp.vakit.NotificationPopup"
+                android:name="com.metinkale.prayerapp.vakit.fragments.NotificationPopup"
                 android:showOnLockScreen="true"
                 android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
@@ -182,11 +182,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name="com.metinkale.prayerapp.vakit.NotificationPrefs"
-                android:screenOrientation="portrait"
-                android:theme="@style/Dialog"/>
-        <activity
+      <activity
                 android:name="com.metinkale.prayerapp.vakit.SilenterPrompt"
                 android:screenOrientation="portrait"
                 android:theme="@style/Theme.AppCompat.Light.Dialog"/>
