--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
+
+    dexOptions {
+        preDexLibraries = false
+    }
+
     signingConfigs {
         debugKey {
             storeFile file('D:/Dropbox/Dokumente/Sonstiges/debug.keystore')
@@ -66,13 +71,15 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
+
+
 dependencies {
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:0.2.0-SNAPSHOT'
+    compile 'com.android.support:percent:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
     compile 'asia.ivity.android:drag-sort-listview:1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
