lots of refactoring + added vibration pattern preference

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:required="false"/>
 
     <application
+            android:fullBackupContent="true"
             android:name="com.metinkale.prayerapp.App"
             android:allowBackup="true"
             android:hardwareAccelerated="true"
