--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,10 +75,10 @@ repositories {
 
 dependencies {
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
-    compile 'com.vanniktech:vntnumberpickerpreference:0.2.0-SNAPSHOT'
+    compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
     compile 'com.android.support:percent:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'asia.ivity.android:drag-sort-listview:1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
