small fix analytics + crashlytics

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
 
@@ -46,7 +47,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 23
         signingConfig signingConfigs.debugKey
-        versionCode 130
+        versionCode 131
         versionName '3.5.4'
     }
 
