--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,14 +82,16 @@ repositories {
 
 
 dependencies {
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
     compile 'com.android.support:percent:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.google.code.gson:gson:+'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'net.danlew:android.joda:2.9.3'
     compile 'com.google.android.gms:play-services-analytics:9.0.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true;
-    }}
+    compile 'com.google.android.gms:play-services-maps:9.0.0'
+}
