--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /app/google-services.json
 /app/fabric.properties
 /app/src/main/res/values/google_maps_api.xml
+/app/src/google-services.json
+/.idea
