--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
             android:name="io.fabric.ApiKey"
             android:value="10b75ffdc8ba3189bd35ee6e9b2a58b2712bf3c1"/>
 
+        <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+
         <activity
             android:name="com.metinkale.prayerapp.vakit.fragments.NotificationPopup"
             android:launchMode="singleInstance"
@@ -353,9 +355,6 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
 
         <uses-library android:required="false" android:name="com.sec.android.app.multiwindow"> </uses-library>
         <meta-data android:name="com.sec.android.support.multiwindow" android:value="true" />
