--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,29 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
+def isFdroid = project.gradle.startParameter.taskNames.get(0).contains("Fdroid")
 
-    dependencies {
-        classpath 'io.fabric.tools:gradle:+'
+if(isFdroid)
+    println "Building for F-Droid"
+else
+    println "Building for Play Store"
+
+buildscript {
+    if(!/*isFdroid*/project.gradle.startParameter.taskNames.get(0).contains("Fdroid")){
+        repositories {
+            maven { url 'https://maven.fabric.io/public' }
+        }
+
+        dependencies {
+            classpath 'io.fabric.tools:gradle:+'
+        }
     }
 }
 
 apply plugin: 'com.android.application'
+if(!isFdroid)
+    apply plugin: 'io.fabric'
+
 
 
 android {
-
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -77,7 +88,6 @@ android {
         }
         play{
             versionName = android.defaultConfig.versionName + " Play Store"
-            apply plugin: 'io.fabric'
             repositories {
                 maven { url 'https://maven.fabric.io/public' }
             }
