--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
     repositories {
-        maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
+//        maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:+' //excludeInFDroid
+//        classpath 'io.fabric.tools:gradle:+' //excludeInFDroid
     }
 }
 
 
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric' //excludeInFDroid
+//apply plugin: 'io.fabric' //excludeInFDroid
 
 android {
 
@@ -78,7 +78,7 @@ android {
         play{
             versionName = android.defaultConfig.versionName + " Play Store"
             repositories {
-                maven { url 'https://maven.fabric.io/public' }
+//                maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
             }
         }
     }
@@ -90,9 +90,9 @@ android {
 
 
 dependencies {
-    playCompile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true;
-    }
+//    playCompile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {//excludeInFDroid
+//        transitive = true;//excludeInFDroid
+//    }//excludeInFDroid
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar'){
         transitive=true
     }
