--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,14 @@ android {
         }
     }
 
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 24
+    buildToolsVersion '24.0.1'
 
 
     defaultConfig {
         applicationId "com.metinkale.prayer"
         minSdkVersion 17
-        targetSdkVersion 23
+        targetSdkVersion 24
         signingConfig signingConfigs.debugKey
         versionCode 144
         versionName '3.6'
@@ -98,10 +98,10 @@ dependencies {
     }
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
-    compile 'com.android.support:percent:23.+'
+    compile 'com.android.support:percent:24.2.0'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:23.+'
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'net.danlew:android.joda:2.9.3'
-    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.koushikdutta.ion:ion:2.1.9'
 }
