--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         signingConfig signingConfigs.debugKey
-        versionCode 151
+        versionCode 152
         versionName '3.6'
     }
 
@@ -103,6 +103,13 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
-    compile 'net.danlew:android.joda:2.9.3'
+    //noinspection GradleDynamicVersion
+    compile 'net.danlew:android.joda:+'
     compile 'com.koushikdutta.ion:ion:2.1.9'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'net.steamcrafted:materialiconlib:1.1.1'
+    compile 'com.android.support:customtabs:24.2.0'
+    compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
+        transitive = true
+    }
 }
