--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         }
     }
 
-    compileSdkVersion 24
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25'
 
 
     defaultConfig {
@@ -47,7 +47,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         signingConfig signingConfigs.debugKey
-        versionCode 158
+        versionCode 159
         versionName '3.6.1'
     }
 
@@ -72,10 +72,10 @@ android {
     }
 
     productFlavors {
-        fdroid{
+        fdroid {
             versionName = android.defaultConfig.versionName + " F-Droid"
         }
-        play{
+        play {
             versionName = android.defaultConfig.versionName + " Play Store"
             repositories {
                 maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
@@ -93,22 +93,22 @@ dependencies {
     playCompile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
     }//excludeInFDroid
-    compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar'){
-        transitive=true
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
+        transitive = true
     }
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
-    compile 'com.android.support:percent:24.2.0'
+    compile 'com.android.support:percent:25.+'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
     //noinspection GradleDynamicVersion
     compile 'net.danlew:android.joda:+'
     compile 'com.koushikdutta.ion:ion:2.1.9'
-    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'com.android.support:customtabs:24.2.0'
+    compile 'com.android.support:customtabs:25.0.0'
     compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
