--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         signingConfig signingConfigs.debugKey
-        versionCode 159
-        versionName '3.6.1'
+        versionCode 160
+        versionName '3.6.2'
     }
 
     buildTypes {
@@ -98,18 +98,19 @@ dependencies {
     }
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
-    compile 'com.android.support:percent:25.+'
+    compile 'com.android.support:percent:25.0.1'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
     //noinspection GradleDynamicVersion
     compile 'net.danlew:android.joda:+'
     compile 'com.koushikdutta.ion:ion:2.1.9'
-    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.1'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'com.android.support:customtabs:25.0.0'
+    compile 'com.android.support:customtabs:25.0.1'
     compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
+    compile 'com.evernote:android-job:1.1.3'
 }
