--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,9 @@ android {
     defaultConfig {
         applicationId "com.metinkale.prayer"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         signingConfig signingConfigs.debugKey
-        versionCode 161
+        versionCode 162
         versionName '3.6.2'
     }
 
@@ -93,7 +93,11 @@ dependencies {
     playCompile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
     }//excludeInFDroid
-    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
+    fdroidCompile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
+        transitive = true
+    }
+    //noinspection GradleDynamicVersion
+    compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
@@ -109,8 +113,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
     compile 'com.android.support:customtabs:25.0.1'
-    compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
-        transitive = true
-    }
     compile 'com.evernote:android-job:1.1.3'
+    compile 'com.google.android.gms:play-services:10.0.0'
 }
