--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,8 @@ dependencies {
     compile 'com.evernote:android-job:1.1.3'
     playCompile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.github.anrwatchdog:anrwatchdog:1.3.+'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
