increased dex heapsize

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ android {
         multiDexEnabled true
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         debug {
             debuggable true
