--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="10b75ffdc8ba3189bd35ee6e9b2a58b2712bf3c1" />
+            android:value="@string/fabricKey" />
 
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
 
