--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,7 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     //noinspection GradleDynamicVersion
     compile 'net.danlew:android.joda:+'
-    compile 'com.koushikdutta.ion:ion:2.1.9'
+    compile 'com.koushikdutta.ion:ion:2.+'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
     compile 'com.android.support:customtabs:25.1.0'
