--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:+' //excludeInFDroid
     }
+
+
 }
 
 
@@ -36,7 +38,7 @@ android {
     }
 
     compileSdkVersion 25
-    buildToolsVersion '25.0.1'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.metinkale.prayer"
@@ -45,7 +47,15 @@ android {
         signingConfig signingConfigs.debugKey
         versionCode 175
         versionName '3.6.3'
-        multiDexEnabled true
+        multiDexEnabled false
+        jackOptions {
+            enabled true
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     dexOptions {
@@ -55,17 +65,13 @@ android {
     buildTypes {
         debug {
             debuggable true
-            jniDebuggable true
             signingConfig signingConfigs.debugKey
-            renderscriptDebuggable true
             minifyEnabled false
             zipAlignEnabled false
         }
         release {
             debuggable false
-            jniDebuggable false
-            renderscriptDebuggable false
-            minifyEnabled false
+            minifyEnabled true
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     'proguard-rules.pro'
@@ -101,23 +107,22 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
-    compile 'com.android.support:percent:25.1.0'
+    compile 'com.android.support:percent:25.1.1'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    //noinspection GradleDynamicVersion
-    compile 'net.danlew:android.joda:+'
-    compile 'com.koushikdutta.ion:ion:2.+'
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'joda-time:joda-time:2.9.6:no-tzdb'
+    compile 'com.koushikdutta.ion:ion:2.1.9'
+    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'com.android.support:customtabs:25.1.0'
+    compile 'com.android.support:customtabs:25.1.1'
     compile 'com.evernote:android-job:1.1.3'
-    playCompile 'com.google.android.gms:play-services:10.0.1'//excludeInFDroid
-    compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.+'
+    playCompile 'com.google.android.gms:play-services-maps:10.0.1'//excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-gcm:10.0.1'//excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-location:10.0.1'//excludeInFDroid
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
