--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity
             android:name="com.metinkale.prayerapp.vakit.fragments.NotificationPopup"
             android:launchMode="singleInstance"
+            android:screenOrientation="nosensor"
             android:showOnLockScreen="true"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
