--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,22 +13,7 @@ buildscript {
 
 
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric' /*
- * Copyright (c) 2016 Metin Kale
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */ //excludeInFDroid
+apply plugin: 'io.fabric'  //excludeInFDroid
 
 android {
 
@@ -45,7 +30,7 @@ android {
 
     signingConfigs {
         debugKey {
-            storeFile file('D:/Dropbox/Dokumente/Sonstiges/debug.keystore')
+            storeFile file('D:/TU-Cloud/Dokumente/Sonstiges/debug.keystore')
             keyAlias 'androiddebugkey'
             keyPassword 'android'
             storePassword 'android'
@@ -63,14 +48,6 @@ android {
         versionCode 176
         versionName '3.6.4'
         multiDexEnabled false
-        jackOptions {
-            enabled true
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     dexOptions {
@@ -105,6 +82,10 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 
@@ -114,7 +95,8 @@ android {
 dependencies {
     playCompile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
-    }//excludeInFDroid
+    }
+    //excludeInFDroid
     fdroidCompile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
         transitive = true
     }
@@ -135,9 +117,12 @@ dependencies {
     compile 'com.android.support:customtabs:25.1.1'
     compile 'com.evernote:android-job:1.1.3'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
-    playCompile 'com.google.android.gms:play-services-maps:10.0.1'//excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-gcm:10.0.1'//excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-location:10.0.1'//excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-maps:10.0.1'
+    //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-gcm:10.0.1'
+    //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-location:10.0.1'
+    //excludeInFDroid
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
