--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,14 @@ android {
         minSdkVersion 15
         targetSdkVersion 25
         signingConfig signingConfigs.debugKey
-        versionCode 176
+        versionCode 178
         versionName '3.6.4'
         multiDexEnabled false
     }
 
     dexOptions {
         javaMaxHeapSize "2g"
+        preDexLibraries = false
     }
 
     buildTypes {
@@ -95,8 +96,7 @@ android {
 dependencies {
     playCompile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
-    }
-    //excludeInFDroid
+    }    //excludeInFDroid
     fdroidCompile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
         transitive = true
     }
@@ -117,12 +117,9 @@ dependencies {
     compile 'com.android.support:customtabs:25.1.1'
     compile 'com.evernote:android-job:1.1.3'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
-    playCompile 'com.google.android.gms:play-services-maps:10.0.1'
-    //excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-gcm:10.0.1'
-    //excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-location:10.0.1'
-    //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-maps:10.2.0'    //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-gcm:10.2.0'    //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-location:10.2.0'    //excludeInFDroid
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
